Fix bugs in CMakeLists.txt files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,16 +3,16 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 SET(_sources cdrom.c toc.c latin1.c msjis.c)
 
-ADD_LIBRARY(cueify SHARED ${_sources})
+ADD_LIBRARY(libcueify SHARED ${_sources})
 
-SET_TARGET_PROPERTIES(cueify PROPERTIES
-    VERSION ${cueify_VERSION}
-    SOVERSION ${cueify_SOVERSION}
-    DEFINE SYMBOL CUEIFY_API_EXPORTS
+SET_TARGET_PROPERTIES(libcueify PROPERTIES
+    VERSION ${libcueify_VERSION}
+    SOVERSION ${libcueify_SOVERSION}
+    DEFINE_SYMBOL LIBCUEIFY_API_EXPORTS
 )
 
 IF(CMAKE_COMPILER_IS_GNUCC)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -pedantic-errors")
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
 
-INSTALL(TARGETS cueify DESTINATION ${LIB_INSTALL_DIR})
+INSTALL(TARGETS libcueify DESTINATION ${LIB_INSTALL_DIR})
