--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,11 +14,11 @@ IF(OS_IS_FREEBSD)
     SET(_os_sources freebsd.c)
 ENDIF(OS_IS_FREEBSD)
 
-ADD_LIBRARY(libcueify SHARED ${_sources} ${_os_sources})
+ADD_LIBRARY(cueify SHARED ${_sources} ${_os_sources})
 
-SET_TARGET_PROPERTIES(libcueify PROPERTIES
-    VERSION ${libcueify_VERSION}
-    SOVERSION ${libcueify_SOVERSION}
+SET_TARGET_PROPERTIES(cueify PROPERTIES
+    VERSION ${cueify_VERSION}
+    SOVERSION ${cueify_SOVERSION}
     DEFINE_SYMBOL LIBCUEIFY_API_EXPORTS
 )
 
@@ -26,4 +26,4 @@ IF(CMAKE_COMPILER_IS_GNUCC)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -pedantic-errors")
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
 
-INSTALL(TARGETS libcueify DESTINATION ${LIB_INSTALL_DIR})
+INSTALL(TARGETS cueify DESTINATION ${LIB_INSTALL_DIR})
