Add checks for stddef and stdint types, and NULL, and defaults if they don't exist

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,19 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 SET(_sources device.c toc.c)
 
+INCLUDE(CheckTypeSize)
+CHECK_TYPE_SIZE(uint8_t UINT8_T)
+CHECK_TYPE_SIZE(uint16_t UINT16_T)
+CHECK_TYPE_SIZE(uint32_t UINT32_T)
+IF(!HAVE_UINT32_T)
+    CHECK_TYPE_SIZE(int INT)
+ENDIF(!HAVE_UINT32_T)
+CHECK_TYPE_SIZE(size_t SIZE_T)
+
 INCLUDE(CheckSymbolExists)
 CHECK_SYMBOL_EXISTS(_WIN32 windows.h OS_IS_WINDOWS)
 CHECK_SYMBOL_EXISTS(__FreeBSD__ sys/param.h OS_IS_FREEBSD)
+CHECK_SYMBOL_EXISTS(NULL stddef.h HAVE_NULL)
 
 IF(OS_IS_WINDOWS)
     SET(_os_sources win32.c)
