Fix SOVERSION reference when versioning dynamic library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,8 +35,8 @@ IF(OS_IS_FREEBSD)
 ENDIF(OS_IS_FREEBSD)
 
 SET_TARGET_PROPERTIES(cueify PROPERTIES
-    VERSION ${cueify_VERSION}
-    SOVERSION ${cueify_SOVERSION}
+    VERSION ${libcueify_VERSION}
+    SOVERSION ${libcueify_SOVERSION}
     DEFINE_SYMBOL LIBCUEIFY_API_EXPORTS
 )
 
