Only output data from failed tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ IF(LIBCHECK_FOUND)
     INCLUDE_DIRECTORIES(${LIBCHECK_INCLUDE_DIRS})
     LINK_LIBRARIES(${LIBCHECK_LIBRARIES})
     
-    ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND} -V)
+    ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)
     
     ADD_EXECUTABLE(check_toc check_toc.c)
     ADD_TEST(check_toc check_toc)
