Add unportable tests to make/cmake

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,8 +18,11 @@ IF(LIBCHECK_FOUND)
     ADD_TEST(check_toc check_toc)
     ADD_DEPENDENCIES(check check_toc)
     
+    ADD_CUSTOM_TARGET(check-unportable
+		      COMMAND ${CMAKE_CURRENT_BINARY_DIR}/check_unportable)
     ADD_EXECUTABLE(check_unportable check_unportable.c)
     ADD_DEPENDENCIES(check check_unportable)
+    ADD_DEPENDENCIES(check-unportable check_unportable)
 ENDIF(LIBCHECK_FOUND)
 
 IF(CMAKE_COMPILER_IS_GNUCC)
