Add tests for multi-session APIs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,10 @@ IF(LIBCHECK_FOUND)
     ADD_TEST(check_toc check_toc)
     ADD_DEPENDENCIES(check check_toc)
     
+    ADD_EXECUTABLE(check_sessions check_sessions.c)
+    ADD_TEST(check_sessions check_sessions)
+    ADD_DEPENDENCIES(check check_sessions)
+    
     ADD_CUSTOM_TARGET(check-unportable
 		      COMMAND ${CMAKE_CURRENT_BINARY_DIR}/check_unportable)
     ADD_EXECUTABLE(check_unportable check_unportable.c)
