Add tests for full TOC APIs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,10 @@ IF(LIBCHECK_FOUND)
     ADD_TEST(check_sessions check_sessions)
     ADD_DEPENDENCIES(check check_sessions)
     
+    ADD_EXECUTABLE(check_full_toc check_full_toc.c)
+    ADD_TEST(check_full_toc check_full_toc)
+    ADD_DEPENDENCIES(check check_full_toc)
+    
     ADD_CUSTOM_TARGET(check-unportable
 		      COMMAND ${CMAKE_CURRENT_BINARY_DIR}/check_unportable)
     ADD_EXECUTABLE(check_unportable check_unportable.c)
