Actually store pseudotrack offsets for the first and last track pseudotracks

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,5 +34,5 @@ IF(LIBCHECK_FOUND)
 ENDIF(LIBCHECK_FOUND)
 
 IF(CMAKE_COMPILER_IS_GNUCC)
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra")
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -g")
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
