Add Darwin support for TOC APIs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ CHECK_TYPE_SIZE(size_t SIZE_T)
 INCLUDE(CheckSymbolExists)
 CHECK_SYMBOL_EXISTS(_WIN32 windows.h OS_IS_WINDOWS)
 CHECK_SYMBOL_EXISTS(__FreeBSD__ sys/param.h OS_IS_FREEBSD)
+CHECK_SYMBOL_EXISTS(__APPLE__ sys/param.h OS_IS_DARWIN)
 CHECK_SYMBOL_EXISTS(NULL stddef.h HAVE_NULL)
 
 IF(OS_IS_WINDOWS)
@@ -27,12 +28,24 @@ ENDIF(OS_IS_WINDOWS)
 IF(OS_IS_FREEBSD)
     SET(_os_sources freebsd.c)
 ENDIF(OS_IS_FREEBSD)
+IF(OS_IS_DARWIN)
+    SET(_os_sources darwin.c)
+ENDIF(OS_IS_DARWIN)
 
 ADD_LIBRARY(cueify SHARED ${_sources} ${_os_sources})
 
 IF(OS_IS_FREEBSD)
     TARGET_LINK_LIBRARIES(cueify cam)
 ENDIF(OS_IS_FREEBSD)
+IF(OS_IS_DARWIN)
+    INCLUDE_DIRECTORIES(/Developer/Headers/FlatCarbon)
+    FIND_LIBRARY(CARBON_LIBRARY Carbon)
+    FIND_LIBRARY(IOKIT_LIBRARY IOKit)
+    FIND_LIBRARY(DISKARBITRATION_LIBRARY DiskArbitration)
+    MARK_AS_ADVANCED(CARBON_LIBRARY IOKIT_LIBRARY DISKARBITRATION_LIBRARY)
+    TARGET_LINK_LIBRARIES(cueify ${CARBON_LIBRARY} ${IOKIT_LIBRARY}
+                                 ${DISKARBITRATION_LIBRARY})
+ENDIF(OS_IS_DARWIN)
 
 SET_TARGET_PROPERTIES(cueify PROPERTIES
     VERSION ${libcueify_VERSION}
