--- a/include/libcueify/types.h.in
+++ b/include/libcueify/types.h.in
@@ -26,41 +26,65 @@
 #ifndef _LIBCUEIFY_TYPES_H
 #define _LIBCUEIFY_TYPES_H
 
+#ifndef HAVE_STDINT_H
 #cmakedefine HAVE_STDINT_H
+#endif
+#ifndef HAVE_STDDEF_H
 #cmakedefine HAVE_STDDEF_H
+#endif
+#ifndef HAVE_UINT8_T
 #cmakedefine HAVE_UINT8_T
+#endif
+#ifndef HAVE_UINT16_T
 #cmakedefine HAVE_UINT16_T
+#endif
+#ifndef HAVE_UINT32_T
 #cmakedefine HAVE_UINT32_T
+#endif
+#ifndef SIZEOF_INT
 #cmakedefine SIZEOF_INT
+#endif
+#ifndef HAVE_SIZE_T
 #cmakedefine HAVE_SIZE_T
+#endif
+#ifndef HAVE_NULL
 #cmakedefine HAVE_NULL
+#endif
 
 #ifdef HAVE_STDINT_H
+#undef HAVE_STDINT_H
 #include <stdint.h>
 #endif
 #ifdef HAVE_STDDEF_H
+#undef HAVE_STDDEF_H
 #include <stddef.h>
 #endif
 
 #ifndef HAVE_UINT8_T
+#undef HAVE_UINT8_T
 typedef unsigned char uint8_t;
 #endif
 #ifndef HAVE_UINT16_T
+#undef HAVE_UINT16_T
 typedef unsigned short uint16_t;
 #endif
 #ifndef HAVE_UINT32_T
+#undef HAVE_UINT32_T
 #if SIZEOF_INT == 32
 typedef unsigned int uint32_t;
 #else
 typedef unsigned long uint32_t;
 #endif
+#undef SIZEOF_INT
 #endif
 
 #ifndef HAVE_SIZE_T
+#undef HAVE_SIZE_T
 typedef unsigned long size_t;
 #endif
 
 #ifndef HAVE_NULL
+#undef HAVE_NULL
 #define NULL ((void *)0)
 #endif
 
