Add SWIG bindings for Python, Ruby, Perl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ SET(INCLUDE_INSTALL_DIR ${EXEC_INSTALL_PREFIX}/include CACHE PATH
 
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(examples)
+ADD_SUBDIRECTORY(swig)
 ADD_SUBDIRECTORY(tests EXCLUDE_FROM_ALL)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
