--- a/include/cueify/types.h.in
+++ b/include/cueify/types.h.in
@@ -32,6 +32,9 @@
 #ifndef HAVE_STDDEF_H
 #cmakedefine HAVE_STDDEF_H
 #endif
+#ifndef HAVE_WINDOWS_H
+#cmakedefine HAVE_WINDOWS_H
+#endif
 #ifndef HAVE_UINT8_T
 #cmakedefine HAVE_UINT8_T
 #endif
@@ -58,6 +61,11 @@
 #ifdef HAVE_STDDEF_H
 #undef HAVE_STDDEF_H
 #include <stddef.h>
+#endif
+#ifdef HAVE_WINDOWS_H
+#undef HAVE_WINDOWS_H
+#include <windows.h>
+#undef min
 #endif
 
 #ifndef HAVE_UINT8_T
