--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,8 @@ LINK_LIBRARIES(cueify)
 ADD_EXECUTABLE(cueify-exe cueify.c)
 SET_TARGET_PROPERTIES(cueify-exe PROPERTIES OUTPUT_NAME "cueify")
 
+ADD_EXECUTABLE(discid discid.c)
+
 IF(CMAKE_COMPILER_IS_GNUCC)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -pedantic")
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
